# mixtape

./: .gitignore  README.md  gradlew  settings.gradle.kts  setup_lame.sh
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lame_jni.c
app/src/main/java/com/mixtape/app/: AudioConverter.kt  ConversionService.kt  LameEncoder.kt  MainActivity.kt  MusicFile.kt  MusicFileAdapter.kt  MusicScanner.kt  UsbReceiver.kt
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/layout/: activity_main.xml  item_music_file.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: usb_device_filter.xml
